--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
     place-items: center;
     padding: 24px;
     font-family: system-ui, sans-serif;
-    background: #eef2ff;
-    color: #1f2937;
+    background: #1aba0b;
+    color: #c71e15;
 
 }
